--- a/nls_cattle_growth_model.ipynb
+++ b/nls_cattle_growth_model.ipynb
@@ -13,7 +13,7 @@
       "package 'tidyverse' successfully unpacked and MD5 sums checked\n",
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\Yusuf Omotosho\\AppData\\Local\\Temp\\Rtmpai9BzD\\downloaded_packages\n",
+      "\tC:\\Users\\Yusuf Omotosho\\AppData\\Local\\Temp\\Rtmp2zMzaL\\downloaded_packages\n",
       "package 'readxl' successfully unpacked and MD5 sums checked\n"
      ]
     },
@@ -35,7 +35,7 @@
      "text": [
       "\n",
       "The downloaded binary packages are in\n",
-      "\tC:\\Users\\Yusuf Omotosho\\AppData\\Local\\Temp\\Rtmpai9BzD\\downloaded_packages\n"
+      "\tC:\\Users\\Yusuf Omotosho\\AppData\\Local\\Temp\\Rtmp2zMzaL\\downloaded_packages\n"
      ]
     },
     {
@@ -85,7 +85,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "id": "b3c08c15-cb10-4f36-99af-3a8ecccd0d12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'C:/Users/Yusuf Omotosho/Desktop/r'"
+      ],
+      "text/latex": [
+       "'C:/Users/Yusuf Omotosho/Desktop/r'"
+      ],
+      "text/markdown": [
+       "'C:/Users/Yusuf Omotosho/Desktop/r'"
+      ],
+      "text/plain": [
+       "[1] \"C:/Users/Yusuf Omotosho/Desktop/r\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "getwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "dc7cee3d-19a8-41e9-81fb-20edb3349cdd",
    "metadata": {},
    "outputs": [
@@ -153,7 +182,7 @@
    "source": [
     "# Task 1: Data Preparation\n",
     "# Load dataset\n",
-    "cattle_data <- read_excel(\"Documents/Org_Dataset.xlsx\") \n",
+    "cattle_data <- read_excel(\"cattle_dataset.xlsx\") \n",
     "\n",
     "# View the imported data\n",
     "head(cattle_data) "
@@ -161,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "52417afb-749f-44cc-964a-3a384cf4b99f",
    "metadata": {},
    "outputs": [
@@ -184,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "63ba785c-4656-4bb2-9f41-989017882fac",
    "metadata": {},
    "outputs": [
@@ -214,6 +243,62 @@
     "} else {\n",
     "  message(\"No non-finite values detected.\")\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "799783b4-cbfb-44ea-8bea-2ddcc8410460",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Values:\n",
+      "         ID  Age_Months Breed_Group   Weight_Kg \n",
+      "          0           0           0           0 \n",
+      "Duplicate Rows:\n",
+      "[1] 0\n",
+      "Summary Statistics:\n",
+      "       ID         Age_Months    Breed_Group          Weight_Kg     \n",
+      " Min.   : 1.0   Min.   : 5.50   Length:79          Min.   : 93.73  \n",
+      " 1st Qu.:20.5   1st Qu.:10.50   Class :character   1st Qu.:157.26  \n",
+      " Median :40.0   Median :15.50   Mode  :character   Median :220.02  \n",
+      " Mean   :40.0   Mean   :15.40                      Mean   :213.43  \n",
+      " 3rd Qu.:59.5   3rd Qu.:20.25                      3rd Qu.:262.75  \n",
+      " Max.   :79.0   Max.   :26.00                      Max.   :325.33  \n",
+      "Outliers Detected (Weight):\n",
+      "integer(0)\n",
+      "Outliers Detected (Age):\n",
+      "integer(0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Data Quality Checks\n",
+    "# Check for missing values\n",
+    "cat(\"Missing Values:\\n\")\n",
+    "print(colSums(is.na(cattle_data)))\n",
+    "\n",
+    "# Check for duplicate rows\n",
+    "cat(\"Duplicate Rows:\\n\")\n",
+    "print(nrow(cattle_data) - nrow(distinct(cattle_data)))\n",
+    "\n",
+    "# Summary statistics for each variable\n",
+    "cat(\"Summary Statistics:\\n\")\n",
+    "print(summary(cattle_data))\n",
+    "\n",
+    "# Check for outliers using Z-score method\n",
+    "z_scores <- scale(cattle_data$Weight_Kg)\n",
+    "outliers <- which(abs(z_scores) > 3)\n",
+    "cat(\"Outliers Detected (Weight):\\n\")\n",
+    "print(outliers)\n",
+    "\n",
+    "z_scores_age <- scale(cattle_data$Age_Months)\n",
+    "outliers_age <- which(abs(z_scores_age) > 3)\n",
+    "cat(\"Outliers Detected (Age):\\n\")\n",
+    "print(outliers_age)"
    ]
   },
   {
